<!--
  ~ Copyright (c) 2018 Thomas Prévost / CE Sauveterre. Distribué sous license libre.
  -->

<resources>
    <string name="app_name">CE Sauveterre</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Ce mail est invalide</string>
    <string name="error_invalid_password">Le mot de passe entré est trop court</string>
    <string name="error_incorrect_password">Le mot de passe entré est incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: remove this placeholder text -->

    <string name="email">Email</string>
    <string name="minimum_password">Mot de passe trop court, entrez au minimum 6 caractères</string>
    <string name="auth_failed">Erreur de connextion. Vérifiez votre mail, ou contactez le développeur</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Envoyer un mail de récupération de mot de passe</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">Récupération de mot de passe</string>
    <string name="btn_forgot_password">Mot de passe oublié ?</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_back"><![CDATA[<< Retour]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Envoyez</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Mot de passe oublié ?</string>
    <string name="forgot_password_msg">Entrez l\'adresse mail associée à votre compte, nous vous enverrons un mail de récupération.</string>

    <string name="cavaliers_shortcut_short_message">Cavaliers</string>
    <string name="cavaliers_shortcut_long_message">Accès à la gestion des cavaliers</string>
    <string name="cavaliers_shortcut_disabled_message">Cavaliers (indisponible)</string>
    <string name="cavalerie_shortcut_short_message">Cavalerie</string>
    <string name="cavalerie_shortcut_long_message">Accès à la gestion de la cavalerie</string>
    <string name="cavalerie_shortcut_disabled_message">Cavalerie (indisponible)</string>
    <string name="reprise_shortcut_short_message">Reprises</string>
    <string name="reprise_shortcut_long_message">Accès à la gestion des reprises</string>
    <string name="reprise_shortcut_disabled_message">Reprises (indisponible)</string>
    <string name="écuries_shortcut_short_message">Écuries</string>
    <string name="écuries_shortcut_long_message">Accès à la gestion des écuries</string>
    <string name="écuries_shortcut_disabled_message">Écuries (indisponible)</string>

    <string name="emergency_numbers">
        \n\n
        Bureau : 02 51 90 76 96 \n\n
        Clémence : 06 18 35 22 34 \n\n
        Cassandre : 00 00 00 00 00 \n\n
        Stéphane : 00 00 00 00 00 \n\n
        Nico : 00 00 00 00 00 \n\n
        \n\n
        Arundel pizz : 00 00 00 00 00 \n\n
    </string>
    <string name="emergency_gps">
        \n\n
        Parc à chien (patte d\'oie) : lat. 46°33\'05\'\' N ; long. 1°49\'08\'\' O \n\n
        Trou à sangliers : lat. 46°33\'13\'\' N ; long. 1°49\'13\'\' O \n\n
        Montée de la plage : lat. 46°32\'56\'\' N ; long. 1°49\'37\'\' O \n\n
        --- \n\n
        Panoramique : lat. 46°33\'45\'\' N ; long. 1°49\'25\'\' O \n\n
        Bout des dunes (séparation) : lat. 46°33\'59\'\' N ; long. 1°49\'50\'\' O \n\n
        Bout des dunes (réunion) : lat. 46°34\'06\'\' N ; long. 1°49\'40\'\' O \n\n
    </string>


    <string-array name="cardRefs">
        <item>c10</item>
        <item>c30</item>
        <item>FT</item>
        <item>FC</item>
    </string-array>

    <string name="randomText">
        Ô rage, Ô désespoir, Ô vieillesse ennemie \n
        N\'ai-je donc tant vécu que pour cette infamie ? \n
        Et suis-je blanchi dans les travaux guerriers \n
        Que pour voir en un jour flêtrir tant de lauriers ? \n
    </string>

    <string-array name="sexes">
        <item>Hongre</item>
        <item>Jument</item>
        <item>Entier</item>
    </string-array>
    <string-array name="typelist">
        <item>C</item>
        <item>P</item>
    </string-array>

    <string-array name="paymentMethods">
        <item>esp.</item>
        <item>ch.</item>
        <item>ANCV</item>
        <item>web</item>
        <item>autre</item>
    </string-array>

</resources>
